tests/pass/function.virtue
func add(a i64, b i64) i64
    return a + b

x = add(2, 2)
print "2 + 2 = {x}"

# 2 + 2 = 4
